Complete Java 17 compatibility fixes - replace all .toList() with .collect(Collectors.toList())
Co-authored-by: lhalam <3837059+lhalam@users.noreply.github.com>